--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -40,15 +40,16 @@
 }
 
 .form {
-  width: 100%;
+  width: calc(100% - 10px);
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: stretch;
   gap: 10px;
 }
 
 .form__text {
   font-size: 20px;
+  text-align: start;
 }
 
 .form__input {
@@ -57,7 +58,6 @@
   -moz-border-radius: 16px;
   -ms-border-radius: 16px;
   -o-border-radius: 16px;
-  width: 90.4%;
   border: none;
   padding: 16px 41px 13px;
   background-image: url('../../assets/icons/search.svg');
@@ -228,9 +228,15 @@
   background-color: #4087B2;
 }
 
-@media screen and (min-width: 451px) {
+@media screen and (min-width: 921px) {
   .modal__form {
     width: 49%;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .modal__form {
+    width: 70%;
   }
 }
 
@@ -240,7 +246,7 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 790px) {
   .modal__form {
     width: 100%;
   }
