--- a/src/components/form/form.module.css
+++ b/src/components/form/form.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: stretch;
   gap: 10px;
+  position: relative;
 }
 
 .form__text {
@@ -27,7 +28,52 @@
   background-color: #F2F4F7;
 }
 
+.form__input:focus {
+  outline: none;
+}
+
 .form__label {
   font-size: 14px;
   text-wrap: nowrap;
+}
+
+.form__list {
+  list-style-type: none;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 55px;
+  background-color: #fff;
+  width: 100%;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.form__item {
+  padding: 12px 14px;
+  text-align: start;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.form__item_disable {
+  background-color: #F2F4F7;
+  cursor: auto;
+}
+
+.form__item_add{
+  background-color: #4DA2D6;
+  color: #fff;
+  background-image: url('../../assets/icons/addUser.svg');
+  background-position: 14px;
+  background-repeat: no-repeat;
+  padding-left: 36px;
+  background-size: 16px 16px;
 }
