--- a/src/components/popup/popup.module.css
+++ b/src/components/popup/popup.module.css
@@ -21,8 +21,6 @@
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  width: 323px;
-  height: 230px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,20 +36,41 @@
 .popup__img {
   height: 160px;
   width: 273px;
-  /* background-repeat: no-repeat;
-  background-position: center; */
-}
-
-.remove .popup__img {
   position: relative;
-  width: 80px;
-  height: 80px;
-  background-color: #FFE9E5;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+}
+
+.popup__img::before {
+  content: '';
+  position: absolute;
+  z-index: 0;
+}
+
+.popup__img::after {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.remove .popup {
+  width: 323px;
+}
+
+.err .popup {
+  width: 516px;
+  height: 277px;
+  top: 49.7%;
+}
+
+.remove .popup__img {
+  width: 80px;
+  height: 80px;
+  background-color: #FFE9E5;
 }
 
 .remove .popup__img::before {
@@ -63,23 +82,51 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   background-color: #FF4A33;
-  content: '';
-  position: absolute;
   left: 10px;
   top: 10px;
-  z-index: 0;
 }
 
 .remove .popup__img::after {
-  content: '';
-  position: absolute;
   width: 20px;
   height: 36px;
   background-image: url('../../assets/icons/delete_white.svg');
-  background-repeat: no-repeat;
-  background-position: center;
   top: 30px;
   left: 30px;
+}
+
+.success .popup__img {
+  width: 80px;
+  height: 80px;
+  background-color: #E5FFE5;
+}
+
+.success .popup__img::before {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background-color: #5CCC81;
+  left: 16px;
+  top: 14px;
+}
+
+.success .popup__img::after {
+  width: 20px;
+  height: 36px;
+  background-image: url('../../assets/icons/succes.svg');
+  top: 20px;
+  left: 30px;
+}
+
+.err .popup__img::after {
+  width: 273px;
+  height: 160px;
+  background-image: url('../../assets/img/error.png');
+  top: 0;
+  left: 0;
 }
 
 .popup__text {
@@ -127,6 +174,14 @@
   color: #E5432E;
 }
 
+.success .popup__btns{
+  width: 85%;
+}
+
+.err .popup__btns{
+  width: 50%;
+}
+
 .popup__button_close {
   background-color: #F2F4F7;
   color: #42474D;
@@ -134,4 +189,5 @@
 
 .popup__button_error {
   background-color: #4DA2D6;
+  color: #fff;
 }
