--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,13 @@
   margin-left: 7px;
   padding: 0;
 }
+
+.rmdp-container  {
+  position: absolute;
+  top: 7px;
+  left: 13px;
+}
+
+.rmdp-input {
+  opacity: 0;
+}
