--- a/src/App.css
+++ b/src/App.css
@@ -10,26 +10,30 @@
 }
 
 .mainForm__footer {
-  margin: 23px 10px 12px;
+  margin: 14px 10px 12px;
   display: flex;
   align-items: center;
   width: calc(100% - 109px);
-  justify-content: space-between;
+  justify-content: flex-end;
 
   span {
     font-size: 14px;
     font-weight: 600;
     color: #42474D;
     display: inline-block;
-    width: 140px;
+    width: 162px;
   }
 
-  span:first-child{
-    width: 59.4%;
+  div {
+    margin-right: auto;
   }
 
   span:nth-child(2) {
-    width: 200px;
+    width: 216px;
+  }
+
+  span:last-child {
+    width: 140px;
   }
 }
 
@@ -61,5 +65,17 @@
 }
 
 .rmdp-input {
-  opacity: 0;
+  border: none;
+  background-color: transparent;
+  margin-left: 28px;
+  width: 61%;
+  padding: 0;
+  font-size: 14px;
+  height: 31px;
+}
+
+.rmdp-input:focus {
+  outline: none;
+  border: none;
+  box-shadow: none;
 }
