--- a/src/components/table/table.module.css
+++ b/src/components/table/table.module.css
@@ -7,18 +7,18 @@
 
 .table {
   border-collapse: collapse;
-  /* margin: 21px 30px; */
+  width: 100%;
   height: 100%;
 
   td {
     border-bottom: 1px solid #DAE3F1;
-    padding: 0 20px 0 6px;
+    padding: 0 20px 13px 6px;
     width: 140px;
     font-size: 14px;
   }
 
   td:first-child {
-    width: 57.4%;
+    width: 57.4vw;
     padding-left: 20px;
   }
 
@@ -29,6 +29,7 @@
 
   td:last-child {
     width: 74px;
+    padding-right: 11px;
   }
 }
 
@@ -89,6 +90,15 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: #fff;
+  transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+}
+
+.table__btn:hover {
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .table__btn_edit {
@@ -99,6 +109,9 @@
   background-image: url('../../assets/icons/delete.svg');
 }
 
+.table__td {
+  min-width: 130px !important;
+}
 
 .table__wrapper::-webkit-scrollbar {
   background: none;
@@ -125,4 +138,23 @@
 
 .table__wrapper::-webkit-scrollbar-thumb:active {
   background-color: #C3D3E5;
+}
+
+tr {
+  transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+}
+
+tr:hover {
+  background-color: #E9EDF5;
+}
+
+tr {
+  height: 58px !important;
+  display: inline-block;
+  width: 100%;
+  margin-top: 13px;
 }
