--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,6 @@
     width: 162px;
   }
 
-  div {
-    margin-right: auto;
-  }
-
   span:nth-child(2) {
     width: 216px;
   }
@@ -42,20 +38,83 @@
   width: 57.7%;
 }
 
-.mainForm__btnSorted {
+.mainForm__textSorted {
   color: #828D99;
   font-weight: 400;
   font-size: 14px;
   letter-spacing: 0.04em;
-  background-image: url('./assets/icons/sort.svg');
+  text-align: start;
+  margin-left: 7px;
+  padding: 0;
+}
+
+.mainForm__text {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 600;
+  color: #42474D;
+  display: inline-block;
+}
+
+.mainForm__sort {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  gap: 7px;
+
+  span {
+    width: auto;
+    letter-spacing: -0.02em;
+    color: #828D99;
+    font-weight: 400;
+  }
+}
+
+.mainForm__wrapperBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  gap: 2px;
+}
+
+.mainForm__btnSorted {
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 0.04em;
+  mask-image: url('./assets/icons/arrow-sort.svg');
+  -webkit-mask-image: url('./assets/icons/arrow-sort.svg');
   background-position: right;
   border: none;
   background-color: transparent;
   background-repeat: no-repeat;
-  width: 138px;
+  width: 9px;
+  height: 6px;
   text-align: start;
-  margin-left: 7px;
   padding: 0;
+  background-color: #A6ACB3;
+}
+
+.mainForm__btnSorted_next {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+}
+
+.mainForm__btnSorted:disabled {
+  background-color: #DAE3F1;
+  cursor: auto;
+}
+
+.mainForm__btnSorted:not(:disabled):active {
+  background-color: #4DA2D6;
+}
+
+.mainForm__btnSorted:hover {
+  opacity: .8;
 }
 
 .rmdp-container  {
