--- a/src/App.css
+++ b/src/App.css
@@ -131,9 +131,18 @@
   padding: 0;
   font-size: 14px;
   height: 31px;
+  box-shadow: none;
+  outline: none;
+  border: none;
 }
 
 .rmdp-input:focus {
+  outline: none;
+  border: none;
+  box-shadow: none;
+}
+
+.rmdp-input:active {
   outline: none;
   border: none;
   box-shadow: none;
