--- a/src/components/form/form.module.css
+++ b/src/components/form/form.module.css
@@ -99,3 +99,23 @@
   left: 40px;
   color: #828D99;
 }
+
+@media screen and (min-width: 1076px) {
+  .modal__title {
+    font-size: 25px;
+  }
+
+  .form__text {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1075px) {
+  .modal__title {
+    font-size: 16px;
+  }
+
+  .form__text {
+    font-size: 14px;
+  }
+}
