--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,37 @@
   -o-border-radius: 20px;
   padding: 10px 10px;
   margin: 2px 30px;
+  width: calc(100vw - 80px);
+  overflow-x: scroll;
+  overflow-y: hidden;
+  min-width: 875px;
+}
+
+.mainForm::-webkit-scrollbar {
+  background: none;
+  height: 10px;
+  width: 6px;
+}
+
+.mainForm::-webkit-scrollbar-track {
+  background: none;
+}
+
+.mainForm::-webkit-scrollbar-thumb {
+  background-color: #C3D3E5;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+}
+
+.mainForm::-webkit-scrollbar-thumb:hover {
+  background-color: #C3D3E5;
+}
+
+.mainForm::-webkit-scrollbar-thumb:active {
+  background-color: #C3D3E5;
 }
 
 .mainForm__footer {
@@ -61,6 +92,7 @@
   align-items: center;
   margin-right: auto;
   gap: 7px;
+  flex-wrap: wrap;
 
   span {
     width: auto;
