--- a/src/components/table/table.module.css
+++ b/src/components/table/table.module.css
@@ -16,6 +16,7 @@
     padding: 0 20px 13px 6px;
     width: 140px;
     font-size: 14px;
+    text-wrap-mode: nowrap;
   }
 
   td:first-child {
@@ -116,7 +117,7 @@
 
 .table__wrapper::-webkit-scrollbar {
   background: none;
-  height: 10px;
+  height: 6px;
   width: 6px;
 }
 
@@ -126,11 +127,11 @@
 
 .table__wrapper::-webkit-scrollbar-thumb {
   background-color: #C3D3E5;
-  border-radius: 3px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 .table__wrapper::-webkit-scrollbar-thumb:hover {
