--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,35 @@
+body {
+  overflow: scroll;
+  min-width: 990px;
+}
+
+body::-webkit-scrollbar {
+  background: none;
+  height: 6px;
+  width: 6px;
+}
+
+body::-webkit-scrollbar-track {
+  background: none;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #C3D3E5;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #C3D3E5;
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: #C3D3E5;
+}
+
 .mainForm {
   background-color: #fff;
   border-radius: 20px;
@@ -8,6 +40,7 @@
   padding: 10px 10px;
   margin: 2px 30px;
   width: calc(100vw - 80px);
+  min-width: 999px;
 }
 
 .mainForm__footer {
