--- a/src/App.css
+++ b/src/App.css
@@ -167,23 +167,11 @@ body::-webkit-scrollbar-thumb:active {
   padding: 0;
   font-size: 14px;
   height: 31px;
-  box-shadow: none;
-  outline: none;
-  border: none;
 }
 
-.rmdp-input:focus {
-  outline: none;
-  border: none;
-  box-shadow: none;
-}
-
-.rmdp-input:active {
-  outline: none;
-  border: none;
-  box-shadow: none;
-}
-
+.rmdp-input,
+.rmdp-input:focus,
+.rmdp-input:active,
 .no-border .rmdp-input {
   border: none !important;
   box-shadow: none !important;
